[package]
name = "ferris_draw"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
serde = {version = "1.0.215", features = ["derive"]}
bevy = {version = "0.15", features = ["async-io"]}
bevy_egui = "0.31"
mlua = {version = "0.10.2", features = ["luajit", "vendored", "async"]}
mlua-sys = {version = "0.6.6", features = ["luajit", "vendored"]}
egui_tiles = "0.10.1"
indexmap = {version = "2.7.0", features = ["serde"]}
once_cell = "1.20.2"
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.94"
